--- a/index.html
+++ b/index.html
@@ -6,58 +6,56 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <link rel="stylesheet" href="./styles.css" >
+  <link rel="stylesheet" href="./style.css" >
   
   <title>Frontend Mentor | FAQ accordion</title>
 </head>
 
 <body>
   <main>
-    <div class="background">
-      <div class="img_wrapper">
-        <img src="./assets/images/background-pattern-desktop.svg" alt="">
+    <div class="img_wrapper">
+      <img id="background" src="./assets/images/background-pattern-desktop.svg" alt="">
+    </div>
+    <div class="faq_wrapper">
+      <div class="faq_header">
+        <img src="./assets/images/icon-star.svg" alt="icon_star">
+        <h1>FAQs</h1>
       </div>
-      <div class="faq_wrapper">
-        <div class="faq_header">
-          <img src="./assets/images/icon-star.svg" alt="icon_star">
-          <h1>FAQs</h1>
+      <div class="faq_questions_wrapper">
+        <div class="question" id="first">
+          <div class="question_title">
+            <p>  What is Frontend Mentor, and how will it help me?</p>
+            <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+            <img class="minus" src="./assets/images/icon-minus.svg" alt="">
+          </div>
+          <p class="question_answer" id="first_answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
         </div>
-        <div class="faq_questions_wrapper">
-          <div class="question" id="first">
-            <div class="question_title">
-              <p>  What is Frontend Mentor, and how will it help me?</p>
-              <img class="plus" src="./assets/images/icon-plus.svg" alt="">
-              <img class="minus" src="./assets/images/icon-minus.svg" alt="">
-            </div>
-            <p class="question_answer" id="first_answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
-          </div>
           
-          <div class="question" id="second">
-            <div class="question_title">
-              <p>Is Frontend Mentor free?</p>
-              <img class="plus" src="./assets/images/icon-plus.svg" alt="">
-              <img class="minus" src="./assets/images/icon-minus.svg" alt="">
-            </div>
-            <p class="question_answer" id="second_answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+        <div class="question" id="second">
+          <div class="question_title">
+            <p>Is Frontend Mentor free?</p>
+            <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+            <img class="minus" src="./assets/images/icon-minus.svg" alt="">
           </div>
+          <p class="question_answer" id="second_answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+        </div>
   
-          <div class="question" id="third">
-            <div class="question_title">
-              <p>Can I use Frontend Mentor projects in my portfolio?</p>
-              <img class="plus" src="./assets/images/icon-plus.svg" alt="">
-              <img class="minus" src="./assets/images/icon-minus.svg" alt="">
-            </div>
-            <p class="question_answer" id="third_answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
+        <div class="question" id="third">
+          <div class="question_title">
+            <p>Can I use Frontend Mentor projects in my portfolio?</p>
+            <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+            <img class="minus" src="./assets/images/icon-minus.svg" alt="">
           </div>
+          <p class="question_answer" id="third_answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
+        </div>
   
-          <div class="question" id="fourth">
-            <div class="question_title">
-              <p>How can I get help if I'm stuck on a challenge?</p>
-              <img class="plus" src="./assets/images/icon-plus.svg" alt="">
-              <img class="minus" src="./assets/images/icon-minus.svg" alt="">
-            </div>
-            <p class="question_answer" id="fourth_answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
+        <div class="question" id="fourth">
+          <div class="question_title">
+            <p>How can I get help if I'm stuck on a challenge?</p>
+            <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+            <img class="minus" src="./assets/images/icon-minus.svg" alt="">
           </div>
+          <p class="question_answer" id="fourth_answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
         </div>
       </div>
     </div>
